Finalizado: -Microservicio de peliculas -Microservicio Gateway -Microservicio Eureka -Microservicio Config Server
Falta terminar:
-Microservicio de cartelera

--- a/ProyectoMicrosCine/microservice-configServer/src/main/resources/configurations/msvc-peliculas.yml
+++ b/ProyectoMicrosCine/microservice-configServer/src/main/resources/configurations/msvc-peliculas.yml
@@ -1,16 +1,14 @@
 server:
-  port: 9090
+  port: 8090
 
 spring:
   application:
-    name: msvc-cartelera
+    name: msvc-peliculas
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     url: jdbc:sqlserver://localhost:1433;databaseName=BDMovieCity;trustServerCertificate=true
     username: cesar
     password: 123
-  config:
-    import: optional:configserver:http//localhost:8888
 
 eureka:
   instance:
