--- a/ProyectoMicrosCine/microservice-cartelera/pom.xml
+++ b/ProyectoMicrosCine/microservice-cartelera/pom.xml
@@ -48,6 +48,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>com.microservice.peliculas</groupId>
+			<artifactId>microservice-peliculas</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
