--- a/ProyectoMicrosCine/microservice-configServer/src/main/resources/configurations/msvc-gateway.yml
+++ b/ProyectoMicrosCine/microservice-configServer/src/main/resources/configurations/msvc-gateway.yml
@@ -22,3 +22,7 @@ spring:
           uri: http://localhost:9090
           predicates:
             - Path=/api/cartelera/**
+        - id: sedes
+          uri: http://localhost:9080
+          predicates:
+            - Path=/api/sedes/**
